# g-zipper

./: CMakeLists.txt  README.md
.github/workflows/: cpp.yml
include/: BitStream.hpp  Gzipper.hpp  HuffmanTree.hpp  LookbackOutputStream.hpp  gzipper.hpp
src/: BitStream.cpp  Gzipper.cpp  LookbackOutputStream.cpp  gzipper.cpp
tests/: BitStreamTests.cpp  GzipperTests.cpp  HuffmanTreeTests.cpp  LOSTests.cpp  VerifyHeader.cpp
tests/testfiles/: 123.txt  moby_dick.txt
